# mcp-resilient

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_DOCUMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_vs_alternatives.py
demo/: .env.example  README.md  ai_agent_setup.py
docs/: MULTITENANT_GUIDE.md  PRODUCTION_GUIDE.md  SETUP_COMPLETE.md  api_reference.md  architecture.md  comparison.md  quickstart.md
examples/: QUICK_START_PRODUCTION.py  basic_retry.py  circuit_breaker_demo.py  fallback_chain_demo.py  gemini_mcp_resilient_demo.py  multitenant_auth_ratelimit.py  multitenant_config.yaml  production_ai_agent_setup.py  siem_threat_intel_example.py
src/mcp_resilient/: __init__.py  cli.py  health.py
src/mcp_resilient/auth/: __init__.py  exceptions.py  provider.py
src/mcp_resilient/bulkhead/: __init__.py  pattern.py
src/mcp_resilient/circuit_breaker/: breaker.py  state_store.py
src/mcp_resilient/core/: config.py  decorator.py  exceptions.py
src/mcp_resilient/deduplication/: __init__.py  dedup.py
src/mcp_resilient/fallback/: router.py
src/mcp_resilient/integrations/: langchain_adapter.py  mcp_client.py
src/mcp_resilient/observability/: exporters.py  logger.py  metrics.py  tracing.py
src/mcp_resilient/rate_limiting/: __init__.py  limiter.py
src/mcp_resilient/retry/: adaptive_timeout.py  backoff.py  budget.py  engine.py  hedged.py
src/mcp_resilient/storage/: base.py  memory_store.py  redis_store.py
tests/: conftest.py  test_circuit_breaker.py  test_decorator_modes.py  test_docs_examples.py  test_enterprise_features.py  test_fallback.py  test_observability.py  test_retry.py
tests/integration/: test_mcp_end_to_end.py
